added alot of media queries and a cool "blackhole"

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         </style>
     </head>
     <body>
+        <div class="blackhole-outer"><div class="blackhole-inner"></div></div>
         <header>
             <h1 class="title">BlueNova</h1>
-        <header>
+        </header>
         <section class="content">
             <p>Quiet and empty but...</p>
             <h2>It works</h2>
