--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <body>
         <div class="blackhole-outer"><div class="blackhole-inner"></div></div>
         <header>
-            <h1 class="title">BlueNova</h1>
+            <div>
+                <h1 class="title">BlueNova</h1>
+                <hr>
+            </div>
         </header>
         <section class="content">
             <p>Quiet and empty but...</p>
