--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </style>
     </head>
     <body>
+        <div class="background"></div>
         <div class="blackhole-outer"><div class="blackhole-inner"></div></div>
         <header>
             <div>
