--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>BlueNova - Space</title>
+        <link rel="icon" type="image/png" href="path-to-your-favicon"/>
         <meta name="description" content="My default page for my website. This means Webserver is still under development">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -21,8 +22,13 @@
             </div>
         </header>
         <section class="content">
-            <p>Quiet and empty but...</p>
-            <h2>It works</h2>
+            <div>
+                <p>Quiet and empty but...</p>
+                <h2>It works</h2>
+            </div>
+            <div class="purple_heart_div">
+                <img src="purple_heart.png">
+            </div>
         </section>
         <footer></footer>
     </body>
