added alt for purple heart

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>It works</h2>
             </div>
             <div class="purple_heart_div">
-                <img src="purple_heart.png">
+                <img src="purple_heart.png" alt="purple heart">
             </div>
         </section>
         <footer></footer>
