--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>BlueNova - Space</title>
-        <link rel="icon" type="image/png" href="path-to-your-favicon"/>
-        <meta name="description" content="My default page for my website. This means Webserver is still under development">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
-        </style>
-    </head>
-    <body>
-        <div class="background"></div>
-        <div class="blackhole-outer"><div class="blackhole-inner"></div></div>
-        <header>
-            <div>
-                <h1 class="title">BlueNova</h1>
-                <hr>
-            </div>
-        </header>
-        <section class="content">
-            <div>
-                <p>Quiet and empty but...</p>
-                <h2>It works</h2>
-            </div>
-            <div class="purple_heart_div">
-                <img src="purple_heart.png" alt="purple heart">
-            </div>
-        </section>
-        <footer></footer>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>BlueNova - Space</title>
+    <link rel="icon" type="image/png" href="path-to-your-favicon" />
+    <meta name="description" content="My default page for my website. This means Webserver is still under development">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+    </style>
+</head>
+
+<body>
+    <div class="background"></div>
+    <div class="blackhole-outer">
+        <div class="blackhole-inner"></div>
+    </div>
+    <header>
+        <div>
+            <h1 class="title">BlueNova</h1>
+            <hr>
+        </div>
+    </header>
+    <section class="content">
+        <div>
+            <p>Quiet and empty but...</p>
+            <h2>It works</h2>
+        </div>
+        <div class="purple_heart_div">
+            <img src="purple_heart.png" alt="purple heart">
+        </div>
+    </section>
+    <footer></footer>
+</body>
+
 </html>
