--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BlueNova - Space</title>
-    <link rel="icon" type="image/png" href="path-to-your-favicon" />
+    <link rel="icon" type="image/png" href="logo.png" />
     <meta name="description" content="My default page for my website. This means Webserver is still under development">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
